# app

./: Cargo.toml  TODO.md
crates/core/: Cargo.toml
crates/core/locales/en-US/: commands.ftl  main.ftl
crates/core/src/: config.rs  error.rs  event.rs  i18n.rs
crates/gui-backend/src/: main.rs
crates/integration/: Cargo.toml
crates/integration/src/: lib.rs
crates/mam/: Cargo.toml
crates/mam/src/: lib.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: kv.rs  lib.rs  registry.rs  runtime.rs
crates/presence/src/: lib.rs
crates/roster/src/: lib.rs
crates/storage/migrations/: 001_initial.sql
crates/storage/src/: lib.rs
crates/test-support/src/: lib.rs
crates/tui/src/: ui.rs
crates/xmpp/: Cargo.toml
crates/xmpp/src/: connection.rs  outbound.rs  transport.rs
crates/xmpp/src/processors/: mam.rs
gui/: README.md  package-lock.json  package.json  tailwind.config.ts
gui/src/: App.vue  style.css
gui/src/composables/: useTheme.ts  useWaddle.ts
gui/src/router/: index.ts
gui/src/views/: ChatView.vue  ConversationListView.vue  PluginView.vue  RosterView.vue  SettingsView.vue
